# markco

./: .gitignore  Makefile  README.md
client/: Makefile  gulpfile.js  package-lock.json  package.json  tsconfig.json
client/css/: controls.css  doc.css  file-list.css  login.css  main.css  project-list.css
client/html/: index.html  newcommands.tex
client/src/: common.d.ts  index.html  main.ts  main.tsx
client/src/api/: index.ts  request.ts
client/src/syntax/: index.js  multiplex.js
client/src/views/: chunk.tsx  control-btns.tsx  doc.tsx  file-browser.tsx  index.ts  login.tsx  main.tsx  project-list.tsx
client/typings/: etch.d.ts  global.d.ts  jsx.d.ts
server/: .gitignore  Caddyfile  LICENSE  markco.cabal  stack.yaml  users.txt
server/app/: Main.hs
server/src/: API.hs  Config.hs  Lib.hs  Server.hs  Utils.hs
server/src/Misc/: Instances.hs
server/src/Server/: Login.hs  Main.hs  Static.hs  Swagger.hs
