name:                markco
version:             0.1.0.0
homepage:            https://github.com/lierdakil/markco#readme
license:             MIT
author:              Nikolay Yakimov
maintainer:          root@livid.pp.ru
copyright:           2017 Nikolay Yakimov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , pandoc
                     , base-compat
                     , mtl
                     , aeson
                     , aeson-compat
                     , attoparsec
                     , bytestring
                     , string-conversions
                     , time
                     , lucid
                     , http-media
                     , wai
                     , directory
                     , blaze-markup
                     , blaze-html
                     , pandoc-types
                     , filepath
                     , servant-blaze
                     , servant-swagger
                     , swagger2
                     , text
                     , syb
                     , blaze-markup
                     , servant-options
                     , wai-cors
                     , wai-extra
                     , http-types
                     , containers
  default-language:    Haskell2010

executable markco-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , markco
                     , warp
  default-language:    Haskell2010
