name:                markco
version:             0.1.0.0
homepage:            https://github.com/lierdakil/markco#readme
license:             MIT
license-file:        LICENSE
synopsis:            Collaborative Markdown
description:         Simple web interface to allow collaborative Markdown workflow
author:              Nikolay Yakimov
maintainer:          root@livid.pp.ru
copyright:           2017 Nikolay Yakimov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , API
                     , Config
                     , Server
                     , Utils
                     , Server.Main
                     , Server.Swagger
                     , Misc.Instances
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , pandoc
                     , mtl
                     , wai
                     , directory
                     , blaze-html
                     , pandoc-types
                     , filepath
                     , servant-swagger
                     , swagger2
                     , text
                     , servant-foreign
                     , wai-cors
                     , wai-extra
                     , http-types
                     , containers
                     , servant
                     , bytestring
                     , pandoc-crossref
                     , syb
                     , cryptonite
                     , aeson
                     , lens
                     , servant-options
  default-language:    Haskell2010
  ghc-options:       -Wall

executable markco-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , markco
                     , warp
  default-language:    Haskell2010
